  * Add myself as an Uploader
  * Add Vcs-Git and Vcs-Browser fields to reflect move to a
    public repository

  [ David Paleino ]
  * debian/control:
    - added myself to Uploaders
    - wrapped dependency fields (eases reading diffs in commits)
    - added quilt Build-Dependency
    - remove duplicate Section in libmapnik0.6
  * debian/watch updated to use new url
  * debian/rules: added quilt infrastructure
  * debian/patches/01-fix_deprecated_includes.patch added
  * debian/copyright, substitute (C) with © to make lintian happy
  * debian/mapnik-doc.doc-base added
  * debian/libmapnik-dev.dirs added

 -- David Paleino <dapal@debian.org>  Tue, 10 Nov 2009 13:30:23 +0100

mapnik (0.6.1-1) unstable; urgency=low

  * New upstream release (closes: #537802, #545887)
  * Add dependency on python-cairo to python-mapnik (closes: #538862)
  * Enable build of kismet plugin
  * Update Standards-Version (no changes)
  * Apply patch from mapnik trunk to fix linking against agg
  * Apply changeset 1340 from mapnik trunk to fix shapefile compiler
    options
  * Switch to unversioned boost
  * Bump Standards-Version (no changes)
  * Adjust versioned dep libmapnik-dev -> libmapnik0.6
  * Change libmapnik-dev from Architecture: all to any to satisfy
    strict versioned dependency requirements
  * Split out API docs and examples into a separate package to avoid
    archive bloat due to above

 -- Dominic Hargreaves <dom@earth.li>  Mon, 19 Oct 2009 23:28:32 +0100

mapnik (0.6.0-1) unstable; urgency=low

  * New upstream release (closes: #522823, #523190)
  * Update debian/build-svn-tarball.sh for next major release
  * Update build-dep from proj to libproj-dev to reflect proj package
    reorganization (closes: #521818)
  * Add explicit configure step in debian/rules
  * Update Standards-Version (no changes)
  * Update build-dep from libltdl3-dev to libltdl-dev to reflect libtool
    changes
  * Changes from Ubuntu:
    - add Homepage control field