@@ -1,10 +1,5 @@
 #!/usr/bin/make -f
 # -*- makefile -*-
-# Sample debian/rules that uses debhelper.
-# This file was originally written by Joey Hess and Craig Small.
-# As a special exception, when this file is copied by dh-make into a
-# dh-make output file, you may use that output file without restriction.
-# This special exception was added by Craig Small in version 0.37 of dh-make.
 
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
@@ -17,96 +12,45 @@ SCONS_FLAGS=INPUT_PLUGINS=raster,sqlite,postgis,ogr,shape,osm,gdal,kismet PROJ_I
 CFLAGS = -Wall -g
 
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-	CFLAGS += -O0
+	export CFLAGS += -O0
 else
-	CFLAGS += -O2
+	export CFLAGS += -O2
 endif
 
-configure: configure-stamp
-configure-stamp:
-	dh_testdir
-	# Add here commands to configure the package.
-	python scons/scons.py configure $(SCONS_FLAGS)
-	touch configure-stamp
+override_dh_auto_configure:
+	python scons/scons.py configure $(SCONS_FLAGS) $(CFLAGS)
+	dh_auto_configure
 
-
-build: build-stamp
-build-stamp: configure-stamp $(QUILT_STAMPFN)
-	dh_testdir
-
-	# Add here commands to compile the package.
+override_dh_auto_build:
 	python scons/scons.py
 	# We don't provide pkg-config files so this Makefile is just confusing
 	# when installed as a demo
-	rm -f demo/c++/Makefile
-	touch $@
+	#rm -f demo/c++/Makefile
+	dh_auto_build
 
-clean: unpatch
-	dh_testdir
-	dh_testroot
-	rm -f build-stamp configure-stamp
-
-	# Add here commands to clean up after the build process.
+override_dh_auto_clean:
 	python scons/scons.py --clean
-	rm -rf .sconf_temp
 	find -name '*.pyc' -exec rm -f {} \;
-	rm -f config.log bindings/python/mapnik/paths.py 
 	find -name '.sconsign*' -exec rm -f {} \;
 	find -name '*.o' -exec rm -f {} \;
-	rm -f utils/shapeindex/shapeindex
-	rm -f config.py config.cache
+	rm -rf .sconf_temp config.log bindings/python/mapnik/paths.py \
+		utils/shapeindex/shapeindex config.py config.cache
 
 	# Lintian fix
 	chmod -x demo/viewer/images/*.png bindings/python/mapnik/ogcserver/modserver.py
 
-	dh_clean 
+	dh_auto_clean
 
-install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k 
-	dh_installdirs
-
-	# Add here commands to install the package into debian/tmp
+override_dh_auto_install:
 	python scons/scons.py install
-	find $(CURDIR)/debian/tmp -name '.sconsign' -exec rm -f {} \;
-	install -d $(CURDIR)/debian/tmp/usr/bin
+	find $(CURDIR)/debian/tmp -name '.sconsign' -delete
+	find $(CURDIR)/debian/tmp -wholename 'c++/Makefile' -delete
 	install -m 0755 debian/mapnik-plugin-base $(CURDIR)/debian/tmp/usr/bin
 
-# Build architecture-independent files here.
-binary-indep: build install
-# We have nothing to do by default.
-
-# Build architecture-dependent files here.
-binary-arch: build install
-	dh_testdir
-	dh_testroot
-	dh_installchangelogs 
-	dh_installdocs
+override_dh_installexamples:
 	dh_installexamples -Xdata/new
-	dh_install --sourcedir=debian/tmp
-#	dh_installmenu
-#	dh_installdebconf	
-#	dh_installlogrotate
-#	dh_installemacsen
-#	dh_installpam
-#	dh_installmime
-#	dh_installinit
-#	dh_installcron
-#	dh_installinfo
-	dh_installman
-	dh_link
-	dh_strip
-	dh_compress
-	dh_fixperms
-#	dh_perl
-	dh_pycentral
-	dh_makeshlibs
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
 
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install configure
+%:
+#	dh_installexamples -Xdata/new
+#	dh_install --sourcedir=debian/tmp
+	dh $@
